// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match disabled snapshot 1`] = `
<button
  class="sc-bdVaJa fiakJD"
  disabled=""
  type="button"
>
  Continue
</button>
`;

exports[`Button should match snapshot 1`] = `
<button
  class="sc-bdVaJa dvnuXi"
  type="button"
>
  Continue
</button>
`;
